# zentape

./: .MIGRATED_FROM_GITHUB  .gitignore  build.py  encoder.py  main.py  mic_audio.py  sys_audio.py  utils.py  video.py  zen_tape_settings.json  zentape.spec
engine_src/: Cargo.toml
engine_src/engine/: Cargo.toml
engine_src/engine/src/: main.rs
engine_src/hook/: Cargo.toml
engine_src/hook/src/: lib.rs
engine_src/injector/: Cargo.toml
engine_src/injector/src/: main.rs
engine_src/reader/: Cargo.toml
engine_src/reader/src/: main.rs
