[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
# Shared DDA capture foundation. See SHARED_DDA_CAPTURE_CRATE.md in the
# zentape root for the design + why this exists. Both zentape (this binary)
# and rustcam (PyO3 Python extension at github.com/zen-ham/rustcam) depend
# on the same crate so the cursor compositor fix lives in one place.
dda_capture = { git = "https://gitlab.com/zenham/dda_capture", branch = "master" }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
]
